# narendraj9.github.io

./: .gitconfig  .gitignore  CNAME  Makefile  README.md  archive.html  archive.xml  blog.cabal  circle.yml  deploy.sh  hakyll.hi  hakyll.hs  index.html  site.hs  sitemap.html
_assets/css/: custom.css
_site/: about.html  archive.html  contact.html  index.html
_site/css/: bootstrap.css  custom.css  syntax.css
_site/miscellany/: books.html  links.html  miscellany.html  movies.html  music.html  poems.html  quotes.html
_site/posts/: church-numerals.html  complex-jewel.html  lcm-hcf-as-operations-on-sets.html
assets/css/: bootstrap.css  custom.css
assets/js/: custom.js
posts/: blogging-with-org.html  first-post.html  generalized-authz.html  initial-post.html  lcm-hcf-as-ops-on-sets.html  poems.html  quick-emacs-hacks.html  sieve-of-erators.html
src/: Main.hs  archive.org  index.org  org-blog.el  sitemap.org
src/drafts/: distributed-snapshots.org  generalized-authz.org  istio-and-envoy.org  quick-emacs-hacks.org  reactive-programming.org
src/posts/: blogging-with-org.org  generalized-authz.org  initial-post.org  lcm-hcf-as-ops-on-sets.org  poems.org  quick-emacs-hacks.org  sieve-of-erators.org
web/: about.markdown  contact.markdown  index.html
web/css/: bootstrap.css  custom.css  syntax.css
web/data/: temp.html
web/js/: custom.js
web/miscellany/: books.markdown  links.markdown  miscellany.markdown  movies.markdown  music.markdown  poems.markdown  quotes.markdown
web/posts/: church-numerals.markdown  complex-jewel.markdown  sieve-of-eratos.markdown  (+1 more)
(+17 files in other folders)
