name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs:   src
  main-is:          Main.hs
  build-depends:    base 
                  , pandoc
                  , containers
                  , hakyll 
  ghc-options:      -threaded
  default-language: Haskell2010
